--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h1>{{title}}</h1>
+<app-nav></app-nav>
 
-<ul>
-    @for (user of users; track user.id) {
-        <li>{{user.id}} - {{user.userName}}</li>
-    }
-</ul>
+<app-home></app-home>
