added angular routing and guards

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container mt-5 margin-top-big">
     <div style="text-align: center;">
 
        @if (!registerMode) {
