--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -3,8 +3,8 @@
         <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
 
 
-        @if (accountService.currentUser()) {
-            <ul class="navbar-nav me-auto mb-2 mb-md-0">
+        <ul class="navbar-nav me-auto mb-2 mb-md-0">
+            @if (accountService.currentUser()) {
                 <li class="nav-item">
                     <a routerLink="/members" routerLinkActive="active" class="nav-link">Matches</a>
                 </li>
@@ -20,15 +20,18 @@
                 <li class="nav-item">
                     <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
                 </li>
-            </ul>
+            }
+        </ul>
+
+        @if (accountService.currentUser()) {
 
             <div dropdown class="dropdown">
-                <img 
+                <!-- <img 
                     class="me-2"
                     src="" 
-                    alt="user main image">
+                    alt="user main image"> -->
                 <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
-                    Welcome john
+                    Welcome {{accountService.currentUser()?.username | titlecase}}
                 </a>
                 <div *dropdownMenu class="dropdown-menu">
                     <a routerLink="/member/edit" class="dropdown-item">Edit profile</a>
