added expection middleware to catch all app errors and returning specific error messages, also added some testing erorr methods in the angular app on the error page

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-nav></app-nav>
 
-<router-outlet></router-outlet>
+<div class="container mt-5 margin-top-big">
+    <div style="text-align: center;">
+        <router-outlet></router-outlet>
+    </div>
+</div>
