--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -97,12 +97,12 @@
     
     
                     </tab>
-                   <!-- <tab heading="Edit photos">
+                    <tab heading="Edit photos">
                         <app-photo-editor
                           [member]="member"
                           (memberChange)="onMemberChange($event)"
                         ></app-photo-editor>
-                    </tab>-->
+                    </tab>
                 </tabset>
             </div>
     
