--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -28,10 +28,10 @@
         @if (accountService.currentUser()) {
 
             <div dropdown class="dropdown">
-                <!-- <img 
+                <img 
                     class="me-2"
-                    src="" 
-                    alt="user main image"> -->
+                    src="{{accountService.currentUser()?.photoUrl || '../../assets/user.png'}}" 
+                    alt="user main image">
                 <a dropdownToggle class="dropdown-toggle text-light text-decoration-none">
                     Welcome {{accountService.currentUser()?.username | titlecase}}
                 </a>
